--- a/src/main/webapp/SqlFormatter.html
+++ b/src/main/webapp/SqlFormatter.html
@@ -50,13 +50,14 @@
                   <table border="0" width="100%" cellpadding="10">
                       <tr>
                             <td width="25%" align="right">
-                                <label for="styleRadio"> Select format style.</label>
+                                <label for="styleRadio"> Select format style:</label>
                             </td>
                             <td width="25%">
-                                <input type="radio" name="styleRadio" value="block" checked>Block style<br>
+                                <input type="radio" name="styleRadio" id="styleRadio"
+                                       value="block" checked>Block style<br>
                             </td>
                             <td width="50%">
-                                <input type="radio" name="styleRadio" value="verbose">Verbose style<br>
+                                <input type="radio" name="styleRadio" value="expanded">Expanded style<br>
                             </td>
                         </tr>
                         <tr>
