Added focus to fields that need to be populated

--- a/src/main/webapp/R-44_WB.html
+++ b/src/main/webapp/R-44_WB.html
@@ -34,7 +34,7 @@
 							<table border="0" width="100%" cellpadding="10">
 								<tr>
 									<td width="15%">								
-										<input type="button" name="About" value="User Guide" onClick="getMathAbout(this)" 
+										<input type="button" name="About" value="User Guide" onClick="getWBAbout(this)"
 											style="font-size:.9em; height:1.8em;" />
 									</td>
 								</tr>
