R-44_WB - updated da formula..

--- a/src/main/webapp/R-44_WB.html
+++ b/src/main/webapp/R-44_WB.html
@@ -77,7 +77,7 @@
                 <li><a href="#tabs-3">Doors</a></li>
                 <li><a href="#tabs-4">Fuel</a></li>
                 <li><a href="#tabs-5">Final Configuration</a></li>
-                <li><a href="#tabs-6">PA & DA</a></li>
+                <li><a href="#tabs-6">Performance</a></li>
                 <li><a href="#tabs-7">Links</a></li>
                 <li><a href="#tabs-8">Donations</a></li>
             </ul>
@@ -576,7 +576,7 @@
             </div>
             <div id="tabs-6">
                 <fieldset>
-                    <legend> PA & DA Data:</legend>
+                    <legend> Performance Data:</legend>
                     <table border="0" width="100%" cellpadding="5">
                         <tr>
                             <th align="left">Current Altimeter.</th>
@@ -612,7 +612,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2">Density Altitude = (current temperature - 4) x 120 + Field Elevation.</td>
+                            <td colspan="2">Density Altitude = ((OAT - ISA Temp) x 120) + Field Elevation.</td>
                             <td>
                                 <input type="number" name="densityAltitude" id="densityAltitude"
                                        size="10"/>
@@ -632,7 +632,7 @@
                     <br>&nbsp;</br>
                     <a href="http://www.faa.gov/" target="_blank">FAA.gov</a>
                     <br>&nbsp;</br>
-                    <a href="http://patsformatters.appspot.com/Donations.html" target="_blank">Donations</a>
+                    <a href="https://www.duat.com/form/login.frm" target="_blank">DUAT.com</a>
                     <br>&nbsp;</br>
                 </fieldset>
             </div>
