--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -2,7 +2,7 @@
 <html>		
 	<head>			
 		<title>Pat's Elementary Math Tutor</title>				
-		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/mathtutor.js"></script>
 		<script type="text/javascript" src="js/jquery-1.6.4.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 		<meta name="description" content="A simple math tutor to help learn multiplication, division, addition and subtraction of numbers from 1 through 12." />
