interim modification to use Angular.js

--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -60,7 +60,7 @@
                         <table border="0" width="100%" cellpadding="10">
                             <tr>
                                 <td width="40%">
-                                    <label> Pick number to learn.</label>
+                                    <p> Pick number to learn.</p>
                                 </td>
                                 <td width="20%">
                                     <input type="radio" name="numberRadio" value="1">1<br>
@@ -88,7 +88,7 @@
                         <table border="0" width="100%" cellpadding="10">
                             <tr>
                                 <td width="40%">
-                                    <label> Pick math function.</label>
+                                    <p> Pick math function.</p>
                                 </td>
                                 <td width="60%">
                                     <input type="radio" name="functionRadio" value="1">Add<br>
