interim modification to use Angular.js

--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Pat's Elementary Math Tutor</title>
-    <script type="text/javascript" src="js/mathtutorangular.js"></script>
     <script type="text/javascript" src="js/jquery-1.6.4.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -265,25 +264,13 @@
             </tr>
         </table>
     </fieldset>
+
     <script>
         var app = angular.module("mathApp", []);
-
-        app.controller ("mathController", function ($scope) {
-            $scope.firstName = "John",
-            $scope.lastName = "Doe"
-
-            $scope.hintVar = false;
-            $scope.hintToggle = function() {
-                $scope.hintVar = !$scope.hintVar;
-            };
-
-            $scope.divideVar = false;
-            $scope.divideSet = function(setting) {
-                $scope.divideVar = setting;
-            };
-
-        });
     </script>
+
+    <script src="js/mathtutorangular.js"></script>
+
 </div>
 </body>
 </html>
