interim modification to use Angular.js

--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -62,22 +62,22 @@
                                     <p> Pick number to learn.</p>
                                 </td>
                                 <td width="20%">
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="1">1<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="2">2<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="3">3<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="4">4<br>
+                                    <input type="radio" ng-model="numberRadio" value="1">1<br>
+                                    <input type="radio" ng-model="numberRadio" value="2">2<br>
+                                    <input type="radio" ng-model="numberRadio" value="3">3<br>
+                                    <input type="radio" ng-model="numberRadio" value="4">4<br>
                                 </td>
                                 <td width="20%">
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="5">5<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="6">6<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="7">7<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="8">8<br>
+                                    <input type="radio" ng-model="numberRadio" value="5">5<br>
+                                    <input type="radio" ng-model="numberRadio" value="6">6<br>
+                                    <input type="radio" ng-model="numberRadio" value="7">7<br>
+                                    <input type="radio" ng-model="numberRadio" value="8">8<br>
                                 </td>
                                 <td width="20%">
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="9">9<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="10">10<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="11">11<br>
-                                    <input type="radio" ng-model="numberRadio" name="numberRadio" value="12">12<br>
+                                    <input type="radio" ng-model="numberRadio" value="9">9<br>
+                                    <input type="radio" ng-model="numberRadio" value="10">10<br>
+                                    <input type="radio" ng-model="numberRadio" value="11">11<br>
+                                    <input type="radio" ng-model="numberRadio" value="12">12<br>
                                 </td>
                             </tr>
                         </table>
