interim modification to use Angular.js

--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -90,10 +90,10 @@
                                     <p> Pick math function.</p>
                                 </td>
                                 <td width="60%">
-                                    <input type="radio" name="functionRadio" value="1">Add<br>
-                                    <input type="radio" name="functionRadio" value="2">Subtract<br>
-                                    <input type="radio" name="functionRadio" value="3">Multiply<br>
-                                    <input type="radio" name="functionRadio" value="4">Divide<br>
+                                    <input type="radio" ng-model="functionRadio" value="1">Add<br>
+                                    <input type="radio" ng-model="functionRadio" value="2">Subtract<br>
+                                    <input type="radio" ng-model="functionRadio" value="3">Multiply<br>
+                                    <input type="radio" ng-model="functionRadio" value="4">Divide<br>
                                 </td>
                             </tr>
                         </table>
